finished up lecture 1b

--- a/Axler/Chapter-1.tex
+++ b/Axler/Chapter-1.tex
@@ -198,13 +198,30 @@ Our first theorem then follows:
     above gives:
     \begin{align*}
         0u + (-0u) &= 0u + 0u + (-0u) \\
-        0 = 0u
+        0 &= 0u
     \end{align*}
     as desired. \qed
     \end{proof*}
 
 \end{theorem}
 
+Advantages of the abstract approach to vector spaces:
+\begin{itemize}
+    \item Can apply what was done in multiple new situations.
+    \item Stripping away inessential properties leads to greater understanding.
+\end{itemize}
 
+If $V$ is a vector space, it would be incorrect to prove that $0u = 0$ for $u \in V$
+by writing: Let $u = (x_1, \ldots, x_n)$, thus
+
+\begin{align*}
+    0u &= (0x_1, \ldots, 0x_n)
+    &= (0, \ldots, 0)
+    &= 0
+\end{align*}
+
+\begin{note}
+    An element of $V$ is not necessarily of the form $(x_1, \ldots, x_n)$
+\end{note}
 
 \endinput
