--- a/Axler/preamble.tex
+++ b/Axler/preamble.tex
@@ -30,6 +30,7 @@
 \usepackage{rotating}
 \usepackage{lipsum}
 \usepackage{epigraph}
+\usepackage{xpatch}
 
 \usepackage{listings}
 \usepackage{physics}
@@ -235,15 +236,16 @@
 
 %%% Title Page
 \renewcommand\epigraphflush{flushright}
-\renewcommand\epigraphsize{\normalsize}
-\setlength\epigraphwidth{0.7\textwidth}
+\renewcommand\epigraphsize{\Large}
+%\setlength\epigraphwidth{0.6\textwidth}
 
 \definecolor{titlepagecolor}{cmyk}{1,.60,0,.40}
 
 \DeclareFixedFont{\titlefont}{T1}{ppl}{b}{it}{0.5in}
 \DeclareFixedFont{\subtitlefont}{T1}{ppl}{b}{it}{0.3in}
 
-\makeatletter                       
+\makeatletter
+\setlength\epigraphwidth{0.6\textwidth}
 \def\printauthor{%                  
     {\large \@author}}              
 \makeatother
@@ -254,48 +256,3 @@
     Rohit Agarwal \\
     \texttt{rohaga@berkeley.edu}
     }
-
-% The following code is borrowed from: https://tex.stackexchange.com/a/86310/10898
-
-\newcommand\titlepagedecoration{%
-\begin{tikzpicture}[remember picture,overlay,shorten >= -10pt]
-
-\coordinate (aux1) at ([yshift=-15pt]current page.north east);
-\coordinate (aux2) at ([yshift=-410pt]current page.north east);
-\coordinate (aux3) at ([xshift=-4.5cm]current page.north east);
-\coordinate (aux4) at ([yshift=-150pt]current page.north east);
-
-\begin{scope}[titlepagecolor!40,line width=12pt,rounded corners=12pt]
-\draw
-  (aux1) -- coordinate (a)
-  ++(225:5) --
-  ++(-45:5.1) coordinate (b);
-\draw[shorten <= -10pt]
-  (aux3) --
-  (a) --
-  (aux1);
-\draw[opacity=0.6,titlepagecolor,shorten <= -10pt]
-  (b) --
-  ++(225:2.2) --
-  ++(-45:2.2);
-\end{scope}
-\draw[titlepagecolor,line width=8pt,rounded corners=8pt,shorten <= -10pt]
-  (aux4) --
-  ++(225:0.8) --
-  ++(-45:0.8);
-\begin{scope}[titlepagecolor!70,line width=6pt,rounded corners=8pt]
-\draw[shorten <= -10pt]
-  (aux2) --
-  ++(225:3) coordinate[pos=0.45] (c) --
-  ++(-45:3.1);
-\draw
-  (aux2) --
-  (c) --
-  ++(135:2.5) --
-  ++(45:2.5) --
-  ++(-45:2.5) coordinate[pos=0.3] (d);   
-\draw 
-  (d) -- +(45:1);
-\end{scope}
-\end{tikzpicture}%
-}
