--- a/Axler/preamble.tex
+++ b/Axler/preamble.tex
@@ -190,7 +190,13 @@
 \newcommand{\inner}[1]{\left\langle #1 \right\rangle}  % Inner product
 \renewcommand{\va}[1]{\vec{\bm{#1}}}  % Vector with italic bold
 \newcommand{\mat}[1]{\left[ #1 \right]}  % Matrix variable
-
+\newcommand{\linearcombination}{a_1v_1 + a_2v_2 + \cdots + a_mv_m}
+\newcommand{\listofvectors}{v_1, v_2, \ldots, v_m}
+\newcommand{\listofscalars}{a_1, a_2, \ldots, a_m}
+\newcommand{\setofvectors}{\set{\listofvectors}}
+\newcommand{\listofnames}[2]{#1_1, #1_2, \ldots, #1_{#2}}
+\newcommand{\spanof}{\operatorname{span}}
+\newcommand{\Lin}[1]{\mathcal{L} \left( #1 \right)}
 
 %%% Probability Theory
 % Operators
@@ -212,7 +218,6 @@
 \newcommand{\Var}[1]{\text{Var}\left( #1 \right)}
 \newcommand{\Cov}[1]{\text{Cov}\left( #1 \right)}
 \renewcommand{\L}[1]{\mathbb{L}\left[ #1 \right]}
-
 
 %%% Miscellaneous
 % Operators
