Finished axler Chapter 2

--- a/Axler/Chapter-1.tex
+++ b/Axler/Chapter-1.tex
@@ -136,7 +136,8 @@ properties of addition and scalar multiplication in $\F^n$:
 \end{itemize}
 
 First, let us define what addition/scalar multiplication is.
-\begin{definition}[Addition, Scalar Multiplication]
+\begin{definition}[Addition, Scalar Multiplication] 
+    $\empty$ \\
     \begin{itemize}
         \item An \textit{addition} on a set $V$ is a function that assigns an element $u + w \in V$ to each pair of elements $u, w \in V$
         \item A \textit{scalar multiplication} on a set $V$ is a function that assigns an element $\lambda u \in V$ to each $\lambda \in \F$ and each $u \in V$
@@ -145,6 +146,7 @@ First, let us define what addition/scalar multiplication is.
 
 \begin{example}
     Suppose $V$ is the set of real valued functions on the interval $[0, 1]$.
+    
     For $f, g \in V$ and $\lambda \in \R$, define $f + g$ and $\lambda f$ by:
     \[ (f+g)(x) = f(x) + g(x) \]
     and
@@ -175,7 +177,7 @@ properties of $\F^n$:
         \item $\F^\infty$ is defined to be the set of all sequences of elements of $\F$:
         \[ \{(x_1, x_2, \ldots) : x_j \in \F \text{for } j = 1, 2, \ldots \} \]
         Addition and scalar multiplication are also defined coordinate-wise. This is also a vector space.
-        \item More generally, if $S$ is a set, let $F^S$ denote the set of functions from $S$ to $\F$.
+        \item More generally, if $S$ is a set, let $\F^S$ denote the set of functions from $S$ to $\F$.
         For $f, g \in \F^S$, the sum $f + g \in \F^S$ is the function defined by:
         \[ (f + g)(x)  = f(x) + g(x)\]
         for all $x \in S$.
