--- a/Axler/preamble.tex
+++ b/Axler/preamble.tex
@@ -190,13 +190,14 @@
 \newcommand{\inner}[1]{\left\langle #1 \right\rangle}  % Inner product
 \renewcommand{\va}[1]{\vec{\bm{#1}}}  % Vector with italic bold
 \newcommand{\mat}[1]{\left[ #1 \right]}  % Matrix variable
-\newcommand{\linearcombination}{a_1v_1 + a_2v_2 + \cdots + a_mv_m}
-\newcommand{\listofvectors}{v_1, v_2, \ldots, v_m}
-\newcommand{\listofscalars}{a_1, a_2, \ldots, a_m}
+\newcommand{\linearcombination}{a_1v_1 + a_2v_2 + \cdots + a_nv_n}
+\newcommand{\listofvectors}{v_1, v_2, \ldots, v_n}
+\newcommand{\listofscalars}{a_1, a_2, \ldots, a_n}
 \newcommand{\setofvectors}{\set{\listofvectors}}
 \newcommand{\listofnames}[2]{#1_1, #1_2, \ldots, #1_{#2}}
 \newcommand{\spanof}{\operatorname{span}}
 \newcommand{\Lin}[1]{\mathcal{L} \left( #1 \right)}
+\newcommand{\Polys}[2]{\mathcal{P}_{#2}(#1)}
 
 %%% Probability Theory
 % Operators
