start of 3.B added

--- a/Axler/Chapter-2.tex
+++ b/Axler/Chapter-2.tex
@@ -195,7 +195,7 @@ $(3 + 2i)z^2 + 4iz + 9 \in \Polys{\C}{20}$
     that is linearly independent and spans $V$.
 \end{definition}
 
-\begin{example} [Examples of bases]
+\begin{example} Examples of bases:
    \begin{itemize}
        \item The list $(1, 0, \dots, 0)$, $(0,1,0,\dots,0)$, $\dots$,
        $(0, \dots, 0, 1)$ is a basis of $\F^n$, called the \textbf{standard basis}
@@ -209,7 +209,7 @@ $(3 + 2i)z^2 + 4iz + 9 \in \Polys{\C}{20}$
 
 Sometimes it's useful to see some non-examples of bases.
 
-\begin{example} [Non-example of Basis]
+\begin{example} Non-example of Basis:
     \begin{itemize}
         \item The list $(1, 2, -4)$, $(7, -5, 6)$ is linearly independent
         in $\F^3$ but is not a basis of $\F^3$ because it does not span $\F^3$
@@ -275,10 +275,11 @@ same length.
 
 \end{definition}
 
-\begin{example}
-    $\dim{\F^n} = n$ because the standard basis of $\F^n$ has length $n$.
-    
-    $\dim{\Polys{\F}{m}} = m + 1$ beacause the basis $1, z, \dots, z^m$ has $m+1$ vectors.
+\begin{example} Examples of dimension:
+    \begin{itemize}
+        \item $\dim{\F^n} = n$ because the standard basis of $\F^n$ has length $n$.
+        \item $\dim{\Polys{\F}{m}} = m + 1$ beacause the basis $1, z, \dots, z^m$ has $m+1$ vectors.
+    \end{itemize}
 \end{example}
 
 \begin{theorem} [Linearly Independent List of the Right Length is a Basis]
