--- a/Axler/preamble.tex
+++ b/Axler/preamble.tex
@@ -182,7 +182,7 @@
 \DeclareMathOperator{\proj}{proj}  % Projection
 \DeclareMathOperator{\Span}{span}  % Vector/Matrix Span
 \DeclareMathOperator{\range}{range}  % Range (span of columns)
-\DeclareMathOperator{\Null}{N}  % Null space
+\DeclareMathOperator{\Null}{null }  % Null space
 \DeclareMathOperator{\Cols}{C}  % Col space
 \DeclareMathOperator{\corr}{corr}  % correlation
 %\DeclareMathOperator{\det}{det}
