--- a/Axler/Chapter-1.tex
+++ b/Axler/Chapter-1.tex
@@ -4,7 +4,7 @@
 
 \subsection{$\R^n$ and $\C^n$}
 
-\begin{definition}[$R$]
+\begin{definition}[$\R$]
     $\R$ denotes the field of real numbers.
 \end{definition}
     
@@ -137,7 +137,7 @@ properties of addition and scalar multiplication in $\F^n$:
 
 First, let us define what addition/scalar multiplication is.
 \begin{definition}[Addition, Scalar Multiplication] 
-    $\empty$ \\
+    $\empty$ 
     \begin{itemize}
         \item An \textit{addition} on a set $V$ is a function that assigns an element $u + w \in V$ to each pair of elements $u, w \in V$
         \item A \textit{scalar multiplication} on a set $V$ is a function that assigns an element $\lambda u \in V$ to each $\lambda \in \F$ and each $u \in V$
